Fix scrollbar jumping when md-dialog for registration animates out. May have unintended consequences, hiding the overflow on all mdDialogs.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -24,3 +24,7 @@
   margin: auto;
   height: 100%;
 }
+
+.md-dialog-container{
+  overflow:hidden;
+  }
